--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/digitalbooks
+spring.datasource.url=jdbc:mysql://localhost:3306/digitalbooks1
 spring.datasource.username=root
 spring.datasource.password=pass@word1
 
 spring.jpa.hibernate.ddl-auto=update
 server.port=8010
 bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 30000
+bezkoder.app.jwtExpirationMs= 300000000
 
