--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8010
 bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 300000000
+spring.mvc.pathmatch.matching-strategy = ant-path-matcher
+
 
